grammar
variable        : ID

match           : MATCH factor COLON EOL (PIPE (factor | MUL) ARROW expr EOL)?

assignment      : variable ASSIGN expr

if-then-else    : IF condition COLON EOL (expr EOL)* (ELIF (expr EOL)*)* (ELSE (expr EOL)*)?

factor          : (PLUS | MINUS factor)
                    | INTEGER
                    | FLOAT
                    | BOOLEAN
                    | QUOTE STRING QUOTE
                    | LPAREN expr RPAREN
                    | match
                    | variable LPAREN (expr (COMMA | expr)*)? RPAREN
                    | assignment
                    | variable

term            : factor ((MUL | DIV | MOD) factor)*

expr            : term ((PLUS | MINUS | AND | OR | SUPEQUAL | INFEQUAL | SUP | INF | EQUAL) term)*

function        : DEF variable LPAREN (variable (COMMA | variable)*)? RPAREN COLON EOL statement_list

declaration     : LET variable (ASSIGN expr)

statement       : (declaration | assignment | function | expr)

statement_list  : (statement EOL)*

program         : statement_list EOF
